--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^3.2.3",
-    "autoprefixer": "^10.4.2",
-    "tailwindcss": "^3.3.3"
+    "astro": "^5.14.8",
+    "autoprefixer": "^10.4.21",
+    "tailwindcss": "^4.1.15"
+  },
+  "dependencies": {
+    "@tailwindcss/postcss": "^4.1.15"
   }
 }
